fixed getByUsername endpoint